<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Guidelines -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <!-- ProgressBar (Center of the screen) -->
        <android.widget.ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <!-- Top Section -->
        <LinearLayout
            android:id="@+id/llHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/topGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_home"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:textColor="@color/purple_200" />

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_search_24"
                />
        </LinearLayout>

        <!-- Random Meal Section -->
        <TextView
            android:id="@+id/tvWhatWouldYouLikeToIt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/llHome"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/str_what_would_you_like_to_eat"
            android:textColor="@color/purple_200" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cvHome"
            android:layout_width="0dp"
            android:layout_height="@dimen/_140sdp"
            app:layout_constraintTop_toBottomOf="@id/tvWhatWouldYouLikeToIt"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/ivRandomHomeFrag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@color/purple_200"
                />
        </androidx.cardview.widget.CardView>

        <!-- Over Popular Items Section -->
        <TextView
            android:id="@+id/tvOverPopularHomeFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cvHome"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/str_over_popular_items"
            android:textColor="@color/purple_200"
            android:textStyle="bold" />




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOverPopularHomeFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvOverPopularHomeFrag"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <!-- Categories Section -->
        <TextView
            android:id="@+id/tvCategoriesHomeFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rvOverPopularHomeFrag"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/str_categories_home_Frag"
            android:textColor="@color/purple_200"
            android:textStyle="bold" />




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategoriesHomeFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvCategoriesHomeFrag"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
