<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MealActivity">

    <!-- ProgressBar - Add this view for loading state -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Failed to load meal details. Please try again later."
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsInstructionsMeal"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        android:layout_marginTop="16dp"
        android:gravity="center"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/purple_200"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@color/white"
            app:title="Meal Name">

            <ImageView
                android:id="@+id/ivMeal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/purple_200"
                android:scaleType="centerCrop"/>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Other UI components here (meal details) -->
            <LinearLayout
                android:id="@+id/ll_meal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCategoryMeal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_category_meal"
                    android:textStyle="bold"
                    android:textColor="@color/purple_200"
                    android:drawablePadding="@dimen/_5sdp"
                    app:drawableStartCompat="@drawable/ic_baseline_category_24"
                    app:drawableTint="@color/purple_200"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvLocationMeal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_location_meal"
                    android:textStyle="bold"
                    android:textColor="@color/purple_200"
                    android:drawablePadding="@dimen/_5sdp"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                    app:drawableTint="@color/purple_200"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvInstructionsMeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_instructions_meal"
                android:textColor="@color/purple_200"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/ll_meal"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"/>

            <TextView
                android:id="@+id/tvDetailsInstructionsMeal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/str_detailed_instructions_meal"
                android:textColor="@color/purple_200"
                android:textStyle="bold"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintTop_toBottomOf="@+id/tvInstructionsMeal"
                app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.03" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite_24"
        app:tint="@color/white"
        app:backgroundTint="@color/purple_200"
        android:elevation="0dp"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="@dimen/_5sdp"/>

    <ImageView
        android:id="@+id/img_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_ondemand_video_24"
        android:layout_gravity="bottom|center"
        app:tint="@color/purple_200"
        android:layout_marginBottom="@dimen/_5sdp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
